Fix action-button overflowing parent

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -81,7 +81,6 @@
   text-align: center;
   min-width: 120px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  width: 100%;
   padding: 8px 15px;
 }
 
